...
    override func viewDidLoad() {
        super.viewDidLoad()

        presenter?.view = self
        webView.navigationDelegate = self
        
        webView.accessibilityIdentifier = "UnsplashWebView"

        webView.addObserver(
            self,
            forKeyPath: #keyPath(WKWebView.estimatedProgress),
            options: .new,
            context: nil)
...
